crates/litert-lm-rust/c/engine.h


typedef struct LiteRtLmEngine LiteRtLmEngine;
typedef struct LiteRtLmSession LiteRtLmSession;
typedef struct LiteRtLmResponses LiteRtLmResponses;
typedef struct LiteRtLmEngineSettings LiteRtLmEngineSettings;
typedef struct LiteRtLmBenchmarkInfo LiteRtLmBenchmarkInfo;
typedef struct LiteRtLmConversation LiteRtLmConversation;
typedef struct LiteRtLmConversationOptionalArgs
    LiteRtLmConversationOptionalArgs;
typedef struct LiteRtLmRepetitionPenaltyConfig LiteRtLmRepetitionPenaltyConfig;
typedef struct LiteRtLmNoRepeatNgramConfig LiteRtLmNoRepeatNgramConfig;
typedef struct LiteRtLmSuppressTokensConfig LiteRtLmSuppressTokensConfig;
typedef struct LiteRtLmThinkingConfig LiteRtLmThinkingConfig;
typedef struct LiteRtLmJsonResponse LiteRtLmJsonResponse;
typedef struct LiteRtLmDetokenizeResult LiteRtLmDetokenizeResult;
typedef struct LiteRtLmTokenizeResult LiteRtLmTokenizeResult;
typedef enum {
  kLiteRtLmTokenUnionTypeString = 0,
  kLiteRtLmTokenUnionTypeIds = 1,
} LiteRtLmTokenUnionType;
typedef struct LiteRtLmTokenUnion LiteRtLmTokenUnion;
typedef struct LiteRtLmTokenUnions LiteRtLmTokenUnions;
typedef struct LiteRtLmInputData LiteRtLmInputData;
typedef struct LiteRtLmSessionConfig LiteRtLmSessionConfig;
typedef struct LiteRtLmConversationConfig LiteRtLmConversationConfig;
typedef enum {
  kLiteRtLmSamplerTypeTopK = 1,
  kLiteRtLmSamplerTypeTopP = 2,
  kLiteRtLmSamplerTypeGreedy = 3,
} LiteRtLmSamplerType;
typedef struct LiteRtLmSamplerParams LiteRtLmSamplerParams;
LITERT_LM_C_API_EXPORT
LiteRtLmSamplerParams* litert_lm_sampler_params_create(
    LiteRtLmSamplerType type);
LITERT_LM_C_API_EXPORT
void litert_lm_sampler_params_delete(LiteRtLmSamplerParams* params);
LITERT_LM_C_API_EXPORT
void litert_lm_sampler_params_set_top_k(LiteRtLmSamplerParams* params,
                                        int32_t top_k);
LITERT_LM_C_API_EXPORT
void litert_lm_sampler_params_set_top_p(LiteRtLmSamplerParams* params,
                                        float top_p);
LITERT_LM_C_API_EXPORT
void litert_lm_sampler_params_set_temperature(LiteRtLmSamplerParams* params,
                                              float temperature);
LITERT_LM_C_API_EXPORT
void litert_lm_sampler_params_set_seed(LiteRtLmSamplerParams* params,
                                       int32_t seed);
typedef enum {
  kLiteRtLmConstraintTypeNone = 0,
  kLiteRtLmConstraintTypeRegex = 1,
  kLiteRtLmConstraintTypeJsonSchema = 2,
} LiteRtLmConstraintType;
typedef enum {
  kLiteRtLmConstraintProviderTypeLlGuidance = 1,
} LiteRtLmConstraintProviderType;
LITERT_LM_C_API_EXPORT
LiteRtLmSessionConfig* litert_lm_session_config_create();
LITERT_LM_C_API_EXPORT
void litert_lm_session_config_set_max_output_tokens(
    LiteRtLmSessionConfig* config, int max_output_tokens);
LITERT_LM_C_API_EXPORT
void litert_lm_session_config_set_apply_prompt_template(
    LiteRtLmSessionConfig* config, bool apply_prompt_template);
LITERT_LM_C_API_EXPORT
void litert_lm_session_config_set_sampler_params(
    LiteRtLmSessionConfig* config, const LiteRtLmSamplerParams* sampler_params);
LITERT_LM_C_API_EXPORT
void litert_lm_session_config_delete(LiteRtLmSessionConfig* config);
LITERT_LM_C_API_EXPORT
int litert_lm_session_config_set_lora_path(LiteRtLmSessionConfig* config,
                                           const char* lora_path);
LITERT_LM_C_API_EXPORT
int litert_lm_session_config_set_audio_lora_path(LiteRtLmSessionConfig* config,
                                                 const char* audio_lora_path);
LITERT_LM_C_API_EXPORT
LiteRtLmConversationConfig* litert_lm_conversation_config_create();
LITERT_LM_C_API_EXPORT
void litert_lm_conversation_config_set_session_config(
    LiteRtLmConversationConfig* config,
    const LiteRtLmSessionConfig* session_config);
LITERT_LM_C_API_EXPORT
void litert_lm_conversation_config_set_system_message(
    LiteRtLmConversationConfig* config, const char* system_message_json);
LITERT_LM_C_API_EXPORT
void litert_lm_conversation_config_set_tools(LiteRtLmConversationConfig* config,
                                             const char* tools_json);
LITERT_LM_C_API_EXPORT
void litert_lm_conversation_config_set_messages(
    LiteRtLmConversationConfig* config, const char* messages_json);
LITERT_LM_C_API_EXPORT
void litert_lm_conversation_config_set_extra_context(
    LiteRtLmConversationConfig* config, const char* extra_context_json);
LITERT_LM_C_API_EXPORT
void litert_lm_conversation_config_set_prompt_template(
    LiteRtLmConversationConfig* config, const char* prompt_template);
LITERT_LM_C_API_EXPORT
void litert_lm_conversation_config_set_enable_constrained_decoding(
    LiteRtLmConversationConfig* config, bool enable_constrained_decoding);
LITERT_LM_C_API_EXPORT
void litert_lm_conversation_config_set_constraint_provider(
    LiteRtLmConversationConfig* config,
    const LiteRtLmConstraintProviderType* provider_type);
LITERT_LM_C_API_EXPORT
void litert_lm_conversation_config_set_filter_channel_content_from_kv_cache(
    LiteRtLmConversationConfig* config,
    bool filter_channel_content_from_kv_cache);
LITERT_LM_C_API_EXPORT
void litert_lm_conversation_config_set_stream_tool_calls(
    LiteRtLmConversationConfig* config, bool stream_tool_calls,
    const char* channel_name);
LITERT_LM_C_API_EXPORT
LiteRtLmThinkingConfig* litert_lm_thinking_config_create();
LITERT_LM_C_API_EXPORT
void litert_lm_thinking_config_delete(LiteRtLmThinkingConfig* config);
LITERT_LM_C_API_EXPORT
void litert_lm_thinking_config_set_enable_thinking(
    LiteRtLmThinkingConfig* config, bool enable_thinking);
LITERT_LM_C_API_EXPORT
void litert_lm_thinking_config_set_thinking_token_budget(
    LiteRtLmThinkingConfig* config, int thinking_token_budget);
LITERT_LM_C_API_EXPORT
void litert_lm_conversation_config_set_thinking_config(
    LiteRtLmConversationConfig* config,
    const LiteRtLmThinkingConfig* thinking_config);
LITERT_LM_C_API_EXPORT
void litert_lm_conversation_config_delete(LiteRtLmConversationConfig* config);
LITERT_LM_C_API_EXPORT
LiteRtLmRepetitionPenaltyConfig* litert_lm_repetition_penalty_config_create();
LITERT_LM_C_API_EXPORT
void litert_lm_repetition_penalty_config_delete(
    LiteRtLmRepetitionPenaltyConfig* config);
LITERT_LM_C_API_EXPORT
void litert_lm_repetition_penalty_config_set_repetition_penalty(
    LiteRtLmRepetitionPenaltyConfig* config, float repetition_penalty);
LITERT_LM_C_API_EXPORT
void litert_lm_repetition_penalty_config_set_presence_penalty(
    LiteRtLmRepetitionPenaltyConfig* config, float presence_penalty);
LITERT_LM_C_API_EXPORT
void litert_lm_repetition_penalty_config_set_frequency_penalty(
    LiteRtLmRepetitionPenaltyConfig* config, float frequency_penalty);
LITERT_LM_C_API_EXPORT
void litert_lm_repetition_penalty_config_set_window_size(
    LiteRtLmRepetitionPenaltyConfig* config, int window_size);
LITERT_LM_C_API_EXPORT
LiteRtLmNoRepeatNgramConfig* litert_lm_no_repeat_ngram_config_create();
LITERT_LM_C_API_EXPORT
void litert_lm_no_repeat_ngram_config_delete(
    LiteRtLmNoRepeatNgramConfig* config);
LITERT_LM_C_API_EXPORT
void litert_lm_no_repeat_ngram_config_set_no_repeat_ngram_size(
    LiteRtLmNoRepeatNgramConfig* config, int no_repeat_ngram_size);
LITERT_LM_C_API_EXPORT
void litert_lm_no_repeat_ngram_config_set_window_size(
    LiteRtLmNoRepeatNgramConfig* config, int window_size);
LITERT_LM_C_API_EXPORT
LiteRtLmSuppressTokensConfig* litert_lm_suppress_tokens_config_create();
LITERT_LM_C_API_EXPORT
void litert_lm_suppress_tokens_config_delete(
    LiteRtLmSuppressTokensConfig* config);
LITERT_LM_C_API_EXPORT
void litert_lm_suppress_tokens_config_set_suppress_tokens(
    LiteRtLmSuppressTokensConfig* config, const int* suppress_tokens,
    size_t num_tokens);
LITERT_LM_C_API_EXPORT
LiteRtLmConversationOptionalArgs* litert_lm_conversation_optional_args_create();
LITERT_LM_C_API_EXPORT
void litert_lm_conversation_optional_args_delete(
    LiteRtLmConversationOptionalArgs* optional_args);
LITERT_LM_C_API_EXPORT
void litert_lm_conversation_optional_args_set_repetition_penalty_config(
    LiteRtLmConversationOptionalArgs* optional_args,
    const LiteRtLmRepetitionPenaltyConfig* repetition_penalty_config);
LITERT_LM_C_API_EXPORT
void litert_lm_conversation_optional_args_set_no_repeat_ngram_config(
    LiteRtLmConversationOptionalArgs* optional_args,
    const LiteRtLmNoRepeatNgramConfig* no_repeat_ngram_config);
LITERT_LM_C_API_EXPORT
void litert_lm_conversation_optional_args_set_suppress_tokens_config(
    LiteRtLmConversationOptionalArgs* optional_args,
    const LiteRtLmSuppressTokensConfig* suppress_tokens_config);
LITERT_LM_C_API_EXPORT
void litert_lm_conversation_optional_args_set_visual_token_budget(
    LiteRtLmConversationOptionalArgs* optional_args, int visual_token_budget);
LITERT_LM_C_API_EXPORT
void litert_lm_conversation_optional_args_set_max_output_tokens(
    LiteRtLmConversationOptionalArgs* optional_args, int max_output_tokens);
LITERT_LM_C_API_EXPORT
void litert_lm_conversation_optional_args_set_thinking_config(
    LiteRtLmConversationOptionalArgs* optional_args,
    const LiteRtLmThinkingConfig* thinking_config);
LITERT_LM_C_API_EXPORT
void litert_lm_conversation_optional_args_set_constraint(
    LiteRtLmConversationOptionalArgs* optional_args,
    LiteRtLmConstraintType constraint_type, const char* constraint_string);