crates/litert-lm-rust/src/bindings.rs

/* automatically generated by rust-bindgen 0.71.1 */

#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct LiteRtLmEngine {
    _unused: [u8; 0],
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct LiteRtLmSession {
    _unused: [u8; 0],
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct LiteRtLmResponses {
    _unused: [u8; 0],
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct LiteRtLmEngineSettings {
    _unused: [u8; 0],
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct LiteRtLmBenchmarkInfo {
    _unused: [u8; 0],
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct LiteRtLmConversation {
    _unused: [u8; 0],
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct LiteRtLmConversationOptionalArgs {
    _unused: [u8; 0],
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct LiteRtLmRepetitionPenaltyConfig {
    _unused: [u8; 0],
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct LiteRtLmNoRepeatNgramConfig {
    _unused: [u8; 0],
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct LiteRtLmSuppressTokensConfig {
    _unused: [u8; 0],
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct LiteRtLmThinkingConfig {
    _unused: [u8; 0],
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct LiteRtLmJsonResponse {
    _unused: [u8; 0],
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct LiteRtLmDetokenizeResult {
    _unused: [u8; 0],
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct LiteRtLmTokenizeResult {
    _unused: [u8; 0],
}
pub const LiteRtLmTokenUnionType_kLiteRtLmTokenUnionTypeString: LiteRtLmTokenUnionType = 0;
pub const LiteRtLmTokenUnionType_kLiteRtLmTokenUnionTypeIds: LiteRtLmTokenUnionType = 1;
pub type LiteRtLmTokenUnionType = ::std::os::raw::c_int;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct LiteRtLmTokenUnion {
    _unused: [u8; 0],
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct LiteRtLmTokenUnions {
    _unused: [u8; 0],
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct LiteRtLmInputData {
    _unused: [u8; 0],
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct LiteRtLmSessionConfig {
    _unused: [u8; 0],
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct LiteRtLmConversationConfig {
    _unused: [u8; 0],
}
pub const LiteRtLmSamplerType_kLiteRtLmSamplerTypeTopK: LiteRtLmSamplerType = 1;
pub const LiteRtLmSamplerType_kLiteRtLmSamplerTypeTopP: LiteRtLmSamplerType = 2;
pub const LiteRtLmSamplerType_kLiteRtLmSamplerTypeGreedy: LiteRtLmSamplerType = 3;
pub type LiteRtLmSamplerType = ::std::os::raw::c_int;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct LiteRtLmSamplerParams {
    _unused: [u8; 0],
}
unsafe extern "C" {
    pub fn litert_lm_sampler_params_create(
        type_: LiteRtLmSamplerType,
    ) -> *mut LiteRtLmSamplerParams;
}
unsafe extern "C" {
    pub fn litert_lm_sampler_params_delete(params: *mut LiteRtLmSamplerParams);
}
unsafe extern "C" {
    pub fn litert_lm_sampler_params_set_top_k(params: *mut LiteRtLmSamplerParams, top_k: i32);
}
unsafe extern "C" {
    pub fn litert_lm_sampler_params_set_top_p(params: *mut LiteRtLmSamplerParams, top_p: f32);
}
unsafe extern "C" {
    pub fn litert_lm_sampler_params_set_temperature(
        params: *mut LiteRtLmSamplerParams,
        temperature: f32,
    );
}
unsafe extern "C" {
    pub fn litert_lm_sampler_params_set_seed(params: *mut LiteRtLmSamplerParams, seed: i32);
}
pub const LiteRtLmConstraintType_kLiteRtLmConstraintTypeNone: LiteRtLmConstraintType = 0;
pub const LiteRtLmConstraintType_kLiteRtLmConstraintTypeRegex: LiteRtLmConstraintType = 1;
pub const LiteRtLmConstraintType_kLiteRtLmConstraintTypeJsonSchema: LiteRtLmConstraintType = 2;
pub type LiteRtLmConstraintType = ::std::os::raw::c_int;
pub const LiteRtLmConstraintProviderType_kLiteRtLmConstraintProviderTypeLlGuidance:
    LiteRtLmConstraintProviderType = 1;
pub type LiteRtLmConstraintProviderType = ::std::os::raw::c_int;
unsafe extern "C" {
    pub fn litert_lm_session_config_create() -> *mut LiteRtLmSessionConfig;
}
unsafe extern "C" {
    pub fn litert_lm_session_config_set_max_output_tokens(
        config: *mut LiteRtLmSessionConfig,
        max_output_tokens: ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn litert_lm_session_config_set_apply_prompt_template(
        config: *mut LiteRtLmSessionConfig,
        apply_prompt_template: bool,
    );
}
unsafe extern "C" {
    pub fn litert_lm_session_config_set_sampler_params(
        config: *mut LiteRtLmSessionConfig,
        sampler_params: *const LiteRtLmSamplerParams,
    );
}
unsafe extern "C" {
    pub fn litert_lm_session_config_delete(config: *mut LiteRtLmSessionConfig);
}
unsafe extern "C" {
    pub fn litert_lm_session_config_set_lora_path(
        config: *mut LiteRtLmSessionConfig,
        lora_path: *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn litert_lm_session_config_set_audio_lora_path(
        config: *mut LiteRtLmSessionConfig,
        audio_lora_path: *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn litert_lm_conversation_config_create() -> *mut LiteRtLmConversationConfig;
}
unsafe extern "C" {
    pub fn litert_lm_conversation_config_set_session_config(
        config: *mut LiteRtLmConversationConfig,
        session_config: *const LiteRtLmSessionConfig,
    );
}
unsafe extern "C" {
    pub fn litert_lm_conversation_config_set_system_message(
        config: *mut LiteRtLmConversationConfig,
        system_message_json: *const ::std::os::raw::c_char,
    );
}
unsafe extern "C" {
    pub fn litert_lm_conversation_config_set_tools(
        config: *mut LiteRtLmConversationConfig,
        tools_json: *const ::std::os::raw::c_char,
    );
}
unsafe extern "C" {
    pub fn litert_lm_conversation_config_set_messages(
        config: *mut LiteRtLmConversationConfig,
        messages_json: *const ::std::os::raw::c_char,
    );
}
unsafe extern "C" {
    pub fn litert_lm_conversation_config_set_extra_context(
        config: *mut LiteRtLmConversationConfig,
        extra_context_json: *const ::std::os::raw::c_char,
    );
}
unsafe extern "C" {
    pub fn litert_lm_conversation_config_set_prompt_template(
        config: *mut LiteRtLmConversationConfig,
        prompt_template: *const ::std::os::raw::c_char,
    );
}
unsafe extern "C" {
    pub fn litert_lm_conversation_config_set_enable_constrained_decoding(
        config: *mut LiteRtLmConversationConfig,
        enable_constrained_decoding: bool,
    );
}
unsafe extern "C" {
    pub fn litert_lm_conversation_config_set_constraint_provider(
        config: *mut LiteRtLmConversationConfig,
        provider_type: *const LiteRtLmConstraintProviderType,
    );
}
unsafe extern "C" {
    pub fn litert_lm_conversation_config_set_filter_channel_content_from_kv_cache(
        config: *mut LiteRtLmConversationConfig,
        filter_channel_content_from_kv_cache: bool,
    );
}
unsafe extern "C" {
    pub fn litert_lm_conversation_config_set_stream_tool_calls(
        config: *mut LiteRtLmConversationConfig,
        stream_tool_calls: bool,
        channel_name: *const ::std::os::raw::c_char,
    );
}
unsafe extern "C" {
    pub fn litert_lm_thinking_config_create() -> *mut LiteRtLmThinkingConfig;
}
unsafe extern "C" {
    pub fn litert_lm_thinking_config_delete(config: *mut LiteRtLmThinkingConfig);
}
unsafe extern "C" {
    pub fn litert_lm_thinking_config_set_enable_thinking(
        config: *mut LiteRtLmThinkingConfig,
        enable_thinking: bool,
    );
}
unsafe extern "C" {
    pub fn litert_lm_thinking_config_set_thinking_token_budget(
        config: *mut LiteRtLmThinkingConfig,
        thinking_token_budget: ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn litert_lm_conversation_config_set_thinking_config(
        config: *mut LiteRtLmConversationConfig,
        thinking_config: *const LiteRtLmThinkingConfig,
    );
}
unsafe extern "C" {
    pub fn litert_lm_conversation_config_delete(config: *mut LiteRtLmConversationConfig);
}
unsafe extern "C" {
    pub fn litert_lm_repetition_penalty_config_create() -> *mut LiteRtLmRepetitionPenaltyConfig;
}
unsafe extern "C" {
    pub fn litert_lm_repetition_penalty_config_delete(config: *mut LiteRtLmRepetitionPenaltyConfig);
}
unsafe extern "C" {
    pub fn litert_lm_repetition_penalty_config_set_repetition_penalty(
        config: *mut LiteRtLmRepetitionPenaltyConfig,
        repetition_penalty: f32,
    );
}
unsafe extern "C" {
    pub fn litert_lm_repetition_penalty_config_set_presence_penalty(
        config: *mut LiteRtLmRepetitionPenaltyConfig,
        presence_penalty: f32,
    );
}
unsafe extern "C" {
    pub fn litert_lm_repetition_penalty_config_set_frequency_penalty(
        config: *mut LiteRtLmRepetitionPenaltyConfig,
        frequency_penalty: f32,
    );
}
unsafe extern "C" {
    pub fn litert_lm_repetition_penalty_config_set_window_size(
        config: *mut LiteRtLmRepetitionPenaltyConfig,
        window_size: ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn litert_lm_no_repeat_ngram_config_create() -> *mut LiteRtLmNoRepeatNgramConfig;
}
unsafe extern "C" {
    pub fn litert_lm_no_repeat_ngram_config_delete(config: *mut LiteRtLmNoRepeatNgramConfig);
}
unsafe extern "C" {
    pub fn litert_lm_no_repeat_ngram_config_set_no_repeat_ngram_size(
        config: *mut LiteRtLmNoRepeatNgramConfig,
        no_repeat_ngram_size: ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn litert_lm_no_repeat_ngram_config_set_window_size(
        config: *mut LiteRtLmNoRepeatNgramConfig,
        window_size: ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn litert_lm_suppress_tokens_config_create() -> *mut LiteRtLmSuppressTokensConfig;
}
unsafe extern "C" {
    pub fn litert_lm_suppress_tokens_config_delete(config: *mut LiteRtLmSuppressTokensConfig);
}
unsafe extern "C" {
    pub fn litert_lm_suppress_tokens_config_set_suppress_tokens(
        config: *mut LiteRtLmSuppressTokensConfig,
        suppress_tokens: *const ::std::os::raw::c_int,
        num_tokens: usize,
    );
}
unsafe extern "C" {
    pub fn litert_lm_conversation_optional_args_create() -> *mut LiteRtLmConversationOptionalArgs;
}
unsafe extern "C" {
    pub fn litert_lm_conversation_optional_args_delete(
        optional_args: *mut LiteRtLmConversationOptionalArgs,
    );
}
unsafe extern "C" {
    pub fn litert_lm_conversation_optional_args_set_repetition_penalty_config(
        optional_args: *mut LiteRtLmConversationOptionalArgs,
        repetition_penalty_config: *const LiteRtLmRepetitionPenaltyConfig,
    );
}
unsafe extern "C" {
    pub fn litert_lm_conversation_optional_args_set_no_repeat_ngram_config(
        optional_args: *mut LiteRtLmConversationOptionalArgs,
        no_repeat_ngram_config: *const LiteRtLmNoRepeatNgramConfig,
    );
}
unsafe extern "C" {
    pub fn litert_lm_conversation_optional_args_set_suppress_tokens_config(
        optional_args: *mut LiteRtLmConversationOptionalArgs,
        suppress_tokens_config: *const LiteRtLmSuppressTokensConfig,
    );
}
unsafe extern "C" {
    pub fn litert_lm_conversation_optional_args_set_visual_token_budget(
        optional_args: *mut LiteRtLmConversationOptionalArgs,
        visual_token_budget: ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn litert_lm_conversation_optional_args_set_max_output_tokens(
        optional_args: *mut LiteRtLmConversationOptionalArgs,
        max_output_tokens: ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn litert_lm_conversation_optional_args_set_thinking_config(
        optional_args: *mut LiteRtLmConversationOptionalArgs,
        thinking_config: *const LiteRtLmThinkingConfig,
    );
}
unsafe extern "C" {
    pub fn litert_lm_conversation_optional_args_set_constraint(
        optional_args: *mut LiteRtLmConversationOptionalArgs,
        constraint_type: LiteRtLmConstraintType,
        constraint_string: *const ::std::os::raw::c_char,
    );
}
